@@ -1,5 +1,6 @@
 [R5.1.0]
 SyncProxyTester:
++ The user can specify position when creating Slider request.
 + Adding EncodedSyncPData support to SyncProxyTester (Ford's).
 + After toggling protocol version, the app needs to be restarted by the user.
 + When clicking the Exit options menu item, the app closes the activity and also stops the proxy service.
